syntax = "proto3";
package oneflow;

import "operator/op_conf.proto";

message OperatorProto {
  OperatorConf user_conf = 1;
  map<string, string> special_ibn2lbn = 3;

  repeated string data_tmp_bns = 4;
  repeated string input_bns = 5;
  repeated string input_diff_bns = 6;
  repeated string output_bns = 7;
  repeated string output_diff_bns = 8;

  repeated string model_bns = 9;
  repeated string model_diff_bns = 10;
  repeated string model_tmp_bns = 11;
  
  oneof specified_op_proto {
  }
}
